--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,12 +4,12 @@ import FAQComponent from '../components/FAQComponent';
 ---
 
 <Layout title="Welcome to Astro.">
-	<main class="bg-secondary min-h-screen flex flex-col items-center">
-		<div class="bg-[url(/background-pattern-mobile.svg)]  h-60 w-full bg-no-repeat bg-cover sm:bg-[url(/background-pattern-desktop.svg)]"></div>
-		<article class="mx-5 py-7 px-6 shadow-2xl relative -top-24 bg-white rounded-lg flex flex-col gap-4 max-w-screen-sm">
+	<main class="bg-secondary min-h-screen flex flex-col items-center overflow-hidden">
+		<div class="bg-[url(/background-pattern-mobile.svg)]  h-72 w-full bg-no-repeat bg-cover sm:bg-[url(/background-pattern-desktop.svg)]"></div>
+		<article class="mx-5 py-7 px-6 shadow-2xl relative -top-28 bg-white rounded-xl flex flex-col gap-4 max-w-screen-sm">
 			<header class="flex items-center gap-3">
 				<img src="/icon-star.svg" alt="" class="w-7">
-				<h1 class="font-bold text-3xl uppercase">faq<span class="text-2xl font-extrabold">s</span></h1>
+				<h1 class="font-bold text-5xl uppercase">faq<span class="text-3xl font-extrabold">s</span></h1>
 			</header>
 
 			<FAQComponent client:only="react"/>
